# skymap_graph_generator

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: using_skymap.ipynb
skymap/: __init__.py  cli.py  constants.py  main.py  metrics.py  utils.py
skynet/: __init__.py  cli.py  constants.py  main.py  metrics.py
tests/: conftest.py  test_metrics.py  test_skymap.py  test_skynet.py
